[package]
name = "ov5640"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"

[features]
default = ["unproven"]
unproven = ["embedded-hal/unproven"]